[tool.poetry]
name = "reinforcement-chess"
version = "0.1.0"
description = ""
authors = ["Sebastian Blum <sebast.blum@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
python-chess = "^1.999"
chess = "^1.4.0"

[tool.poetry.dev-dependencies]
numpy = "^1.20.0"
pandas = "^1.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
